// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`goes back to a timer view 1`] = `
<div>
  <div
    class="sc-iwsKbI jjzenC"
  >
    <div
      class="sc-bxivhb fnePsM"
    >
      <div
        class="sc-EHOje iAwqOV"
      >
        <span
          class="sc-bZQynM bOrPFB"
        >
          0
        </span>
        <span
          class="sc-gzVnrw hPcPGm"
        >
          42
        </span>
      </div>
      <button
        class="sc-bdVaJa sc-htpNat bOjvbW"
      >
        Stop
      </button>
    </div>
    <div
      class="sc-gZMcBi gupvCx"
    >
      <button
        class="sc-bdVaJa sc-bwzfXH davee"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </button>
      <button
        aria-label="View Graph"
        class="sc-bdVaJa sc-bwzfXH davee"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176 64h64v384h-64zM80 336h64v112H80zM272 272h64v176h-64zM368 176h64v272h-64z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders 1`] = `
<div
  className="sc-iwsKbI jjzenC"
>
  <div
    className="sc-bxivhb fnePsM"
  >
    <div
      className="sc-EHOje iAwqOV"
    >
      <span
        className="sc-bZQynM bOrPFB"
      >
        0
      </span>
      <span
        className="sc-gzVnrw hPcPGm"
      >
        42
      </span>
    </div>
    <button
      className="sc-bdVaJa sc-htpNat bOjvbW"
      onClick={[Function]}
    >
      Stop
    </button>
  </div>
  <div
    className="sc-gZMcBi gupvCx"
  >
    <button
      className="sc-bdVaJa sc-bwzfXH davee"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </button>
    <button
      aria-label="View Graph"
      className="sc-bdVaJa sc-bwzfXH davee"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M176 64h64v384h-64zM80 336h64v112H80zM272 272h64v176h-64zM368 176h64v272h-64z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`views a performance graph 1`] = `
<div>
  <div
    class="sc-iwsKbI jjzenC"
  >
    <div
      class="sc-dnqmqq kVyIhb"
    >
      No performance graph to show yet!
    </div>
    <div
      class="sc-gZMcBi gupvCx"
    >
      <button
        class="sc-bdVaJa sc-bwzfXH davee"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </button>
      <button
        aria-label="View Timer"
        class="sc-bdVaJa sc-bwzfXH davee"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
